--- a/docs.html
+++ b/docs.html
@@ -23,7 +23,7 @@
 
             <div class="card">
         <h3>Document de l'Épreuve E4</h3>
-        <p>Epreuve E4 2023 — <a href="assets/EPREUVE_E4_2023.pdf" download="E4_2023_Ethan_Coppin.pdf">Télecharger  </a></p>
+        <p>Epreuve E4 2023 — <a href="EPREUVE_E4_2023.pdf" download="E4_2023_Ethan_Coppin.pdf">Télecharger  </a></p>
       </div>
 
     </section>
@@ -33,4 +33,5 @@
    2025 - Portfolio BTS SIO <br> -COPPIN Ethan
   </footer>
 </body>
+
 </html>
