Add CV download link to docs.html
Added a new document link for CV download.

--- a/docs.html
+++ b/docs.html
@@ -26,6 +26,11 @@
         <p>Epreuve E4 2023 — <a href="EPREUVE_E4_2023.pdf" download="E4_2023_Ethan_Coppin.pdf">Télecharger  </a></p>
       </div>
 
+      <div class="card">
+        <h3>Document de l'Épreuve E4</h3>
+        <p>Epreuve E4 2023 — <a href="CV.pdf" download="CV.pdf">Télecharger  </a></p>
+      </div>
+
     </section>
   </main>
 
@@ -35,3 +40,4 @@
 </body>
 
 </html>
+
